fix(styles): set correct `100vw` width to prevent horizontal scroll when vertical page scrollbar is displayed

--- a/styles/helpers/_mixins.scss
+++ b/styles/helpers/_mixins.scss
@@ -78,7 +78,7 @@
     right: $right;
     #{$property}: 0;
     translate: $translate;
-    width: 100vw;
+    width: var(--100vw);
     height: rem(1);
     background-color: var(--color-dark-15);
   }
